--- a/_site.yml
+++ b/_site.yml
@@ -18,3 +18,4 @@ output:
     feedback_url: "https://github.com/ukgovdatascience/govdown/issues"
     favicon: "custom"
     google_analytics: "UA-45097885-11"
+exclude: ["node_modules", "DESCRIPTION", "inst", "install-govuk-frontend.sh", "LICENSE", "LICENSE.md", "LICENSE.html", "man", "NAMESPACE", "package.json", "R", ".Rbuildignore", "README.md", "README.html", "scss", "tags"]
