--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,5 +14,7 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.1.1
-Imports: 
+Imports:
     rmarkdown
+Suggests: 
+    testthat (>= 2.1.0)
