--- a/.travis.yml
+++ b/.travis.yml
@@ -3,21 +3,21 @@
 language: R
 cache: packages
 
-r:
-  - oldrel
-  - release
-  - devel
-
-# Make bash scripts executable, so they can be run later.
-before_script:
-- chmod +x ./_build.sh
-- chmod +x ./_deploy.sh
-
-script:
-- "./_build.sh"
-- if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then bash ./_deploy.sh; else echo "PR so
-  not deploying"; fi
-
-before_install:
-- openssl aes-256-cbc -K $encrypted_e5387e4e26d8_key -iv $encrypted_e5387e4e26d8_iv
-  -in deploy_key.enc -out deploy_key -d
+matrix:
+  include:
+    - r: devel
+    - r: release
+      deploy:
+        provider: script
+          # Make bash scripts executable, so they can be run later.
+          before_script:
+            - chmod +x ./_build.sh
+            - chmod +x ./_deploy.sh
+          script:
+            - "./_build.sh"
+            - if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then bash ./_deploy.sh; else echo "PR so
+            not deploying"; fi
+          before_install:
+            - openssl aes-256-cbc -K $encrypted_e5387e4e26d8_key -iv $encrypted_e5387e4e26d8_iv
+            -in deploy_key.enc -out deploy_key -d
+    - r: oldrel
