--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,21 +1,24 @@
 Package: govdown
 Title: GOV.UK Style Templates for R Markdown
 Version: 0.7.0
-Authors@R:
-    person("Crown Copyright 2018", role = "cph")
-    person(given = "Duncan",
-           family = "Garmonsway",
-           role = c("aut", "cre"),
-           email = "duncan.garmonsway@digital.cabinet-office.gov.uk")
-Description: A suite of custom R Markdown formats and templates for
-  authoring web pages styled with the GOV.UK Design System.
+Authors@R: 
+    c(person(given = "Crown Copyright 2018",
+             role = "cph"),
+      person(given = "Duncan",
+             family = "Garmonsway",
+             role = c("aut", "cre"),
+             email = "duncan.garmonsway@digital.cabinet-office.gov.uk"))
+Description: A suite of custom R Markdown formats and templates
+    for authoring web pages styled with the GOV.UK Design System.
 License: MIT + file LICENSE
+URL: https://ukgovdatascience.github.io/govdown
+BugReports: https://github.com/ukgovdatascience/govdown/issues
+Imports:
+    rmarkdown
+Suggests:
+    reticulate,
+    testthat (>= 2.1.0)
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.1.1
-Imports:
-    rmarkdown
-Suggests: 
-    testthat (>= 2.1.0),
-    reticulate
