--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,5 @@ script:
   not deploying"; fi
 before_install:
 - openssl aes-256-cbc -K $encrypted_e5387e4e26d8_key -iv $encrypted_e5387e4e26d8_iv -in deploy_key.enc -out deploy_key -d
+- wget https://github.com/jgm/pandoc/releases/download/2.7.3/pandoc-2.7.3-1-amd64.deb
+- sudo dpkg -i pandoc-2.7.3-1-amd64.deb
