Don't attempt to decrypt the deploy_key in PRs
Otherwise the whole build fails

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ script:
 - if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then bash ./_deploy.sh; else echo "PR so
   not deploying"; fi
 before_install:
-- openssl aes-256-cbc -K $encrypted_e5387e4e26d8_key -iv $encrypted_e5387e4e26d8_iv -in deploy_key.enc -out deploy_key -d
+- if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then bash openssl aes-256-cbc -K $encrypted_e5387e4e26d8_key -iv $encrypted_e5387e4e26d8_iv -in deploy_key.enc -out deploy_key -d; else echo "PR so not decrypting key"; fi
 - wget https://github.com/jgm/pandoc/releases/download/2.5/pandoc-2.5-1-amd64.deb
 - sudo dpkg -i pandoc-2.5-1-amd64.deb
