--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,8 @@ Imports:
     rmarkdown
 Suggests:
     reticulate,
-    testthat (>= 2.1.0)
+    testthat (>= 2.1.0),
+    crosstalk
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
